# paddle-battle

./: Cargo.toml  Makefile  README.md  todo.md
.github/workflows/: website-build.yml
docs/: engine.md  game-ideas.md  paddle-battle.md
scripts/: stylus_build.sh  web_build.sh
server/: Cargo.toml
server/src/: main.rs
src/: consts.rs  errors.rs  lib.rs  main.rs  paddle.rs  physics.rs  serde_impl.rs  stylus_entry.rs  web_entry.rs  world.rs
stylus-test/: Cargo.toml
stylus-test/src/: game.rs  lib.rs  paddle.rs  tests.rs
stylus-test/src/abi/: mod.rs
stylus-test/src/common/: mod.rs  project.rs
website/: .eslintrc  package.json
website/src/: App.tsx  Paddle.tsx
website/src/wasm-types/: cbor-web.d.ts  wasm-game-state.t.ts
